src/ui/sonarr_ui/blocklist/snapshots/managarr__ui__sonarr_ui__blocklist__blocklist_ui_tests__tests__snapshot_tests__blocklist_tab_BlocklistClearAllItemsPrompt.snap
---
source: src/ui/sonarr_ui/blocklist/blocklist_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Series Title ▼                            Source Title                                                 Language          Quality          Date                    
=> Test Series                               Test Source Title                                            English           Bluray-1080p     2024-02-10 07:28:45 UTC 
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                  ╭──────  Clear Blocklist  ──────╮                                                                  
                                                                  │   Do you want to clear your   │                                                                  
                                                                  │          blocklist?           │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │╭──────────────╮╭─────────────╮│                                                                  
                                                                  ││      Yes     ││     No      ││                                                                  
                                                                  │╰──────────────╯╰─────────────╯│                                                                  
                                                                  ╰───────────────────────────────╯
