src/ui/sonarr_ui/blocklist/snapshots/managarr__ui__sonarr_ui__blocklist__blocklist_ui_tests__tests__snapshot_tests__blocklist_tab_BlocklistItemDetails.snap
---
source: src/ui/sonarr_ui/blocklist/blocklist_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Series Title ▼                            Source Title                                                 Language          Quality          Date                    
=> Test Series                               Test Source Title                                            English           Bluray-1080p     2024-02-10 07:28:45 UTC 
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                         ╭───────────────────────────────────  Details  ───────────────────────────────────╮                                         
                                         │Name: Test Source Title                                                          │                                         
                                         │Protocol: usenet                                                                 │                                         
                                         │Indexer: NZBgeek (Prowlarr)                                                      │                                         
                                         │Message: test message                                                            │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         │                                                                                 │                                         
                                         ╰─────────────────────────────────────────────────────────────────────────────────╯
