src/ui/sonarr_ui/blocklist/snapshots/managarr__ui__sonarr_ui__blocklist__blocklist_ui_tests__tests__snapshot_tests__blocklist_ui_renders_with_blocklist_items.snap
---
source: src/ui/sonarr_ui/blocklist/blocklist_ui_tests.rs
expression: output
---
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Series Title                  Source Title                                Language     Quality     Date              
=>                               Test.Series.S01E01.1080p                                             1970-01-01 00:00:0
                                 Another.Series.S02E05.720p                                           1970-01-01 00:00:0
